--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,16 +1,9 @@
 <div class="schedule-container">
   <mat-form-field class="timezoneField">
-    <mat-select  placeholder="TimeZone"  [(ngModel)]="regionTimeZone" (selectionChange)="getScheduleCasesList(regionTimeZone)" >
+    <mat-select  placeholder="TimeZone" (closed)="filteredRegion=regionTimeZoneList"  [(ngModel)]="regionTimeZone" (selectionChange)="getScheduleCasesList(regionTimeZone)" >
       <mat-option>
         <ngx-mat-select-search  placeholderLabel="Search..." 
         noEntriesFoundLabel="No region found" aria-hidden="true" (keyup)="onKey($event.target)">
-        <!-- <button *ngIf="false"
-        mat-icon-button
-        aria-label="Clear"
-        (click)="search('')"
-        class="mat-select-search-clear">
-        <mat-icon ngxMatSelectSearchClear>close</mat-icon>
-        </button> -->
       </ngx-mat-select-search>
       </mat-option>
       <mat-option *ngFor="let row of filteredRegion;let i =index"
