--- a/src/app/home/home-carousel/home-carousel.component.html
+++ b/src/app/home/home-carousel/home-carousel.component.html
@@ -5,10 +5,13 @@
         <div class="col-12 carousel-inner" role="listbox" (click)="enrouteCase(list)">
           <img class="col-7 mb-2" src="{{ list.thumbnail}}" alt="slide" >
           <div class="col-5 ml-3">
-            <h5 class="red_text">CASE OF THE WEEK - {{'Week of'}} {{ list.createdAt | date:'longDate' }}</h5>
+            <h5 class="red_text">CASE OF THE WEEK - {{list.weekNo}}{{list.weekNo==1?'st':list.weekNo==2?'nd':list.weekNo==3?'rd':'th'}}
+              {{'Week of'}} {{ list.month | titlecase }},{{ list.year}}</h5>
             <mat-divider class="mb-2"></mat-divider>
             <label>{{list.title}}</label>
-            <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ list.createdAt | date:'longDate' }}</p>
+            <!-- <p style="color: #FFFFFF80;;font-weight: 600;">{{'Week of'}} {{ list.createdAt | date:'longDate' }}</p> -->
+            <p class="week_style">{{list.weekNo}}{{list.weekNo==1?'st':list.weekNo==2?'nd':list.weekNo==3?'rd':'th'}}
+              {{'Week of'}} {{ list.month | titlecase }},{{ list.year}}</p>
             <div class="mt-5" style="display: flex;">
                 <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
                 <div class="ml-2"  style="display: block;">
