--- a/src/app/auth/sign-up/email-verify/email-verify.component.html
+++ b/src/app/auth/sign-up/email-verify/email-verify.component.html
@@ -5,8 +5,7 @@
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="header" style="text-align: center;"><img src="assets\med.png"
                         style="width: 14rem;height: 5rem;"></div>
-                <h2 class="header" style="text-align: center;color: #fff;font-weight: 600;">Enter Email To Reset
-                    Password</h2>
+                <h2 class="header" style="text-align: center;color: #fff;font-weight: 600;">Enter Email For Verification</h2>
                 <div class="section-b col-md-12">
                     <mat-label>Email Id</mat-label>
                     <input class="input" type="email" name="email" matInput formControlName="email" maxlength="50"
