--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -72,7 +72,7 @@
   <div class="small-column">
     <!-- Chat section -->
     <div *ngIf="showChat"> 
-      <app-chat [pageId]="pageId"/>
+      <app-chat [pageId]="current_case_id"/>
     </div>
 
     <img width="" src="../../assets/add_medicine.svg" alt="Video Thumbnail">
