--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -4,22 +4,40 @@
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <div class="header" style="text-align: center;"><img src="assets\med.png"
                         style="width: 14rem;height: 5rem;"></div>
-                <h2 class="header" style="text-align: center;color: #fff;font-weight: 600;  margin-top: 20px;">Reset Password</h2>
+                <h2 class="header" style="text-align: center;color: #fff;font-weight: 600;  margin-top: 20px;">Reset
+                    Password</h2>
                 <div class="section-b col-md-12">
                     <mat-label>Enter New Password</mat-label>
-                    <input class="input" type="password" name="newPassword" matInput formControlName="newPassword"
-                        maxlength="50" required>
+                    <!-- <input class="input" type="password" name="newPassword" matInput formControlName="newPassword"
+                        maxlength="50" required> -->
+                    <div class="password-input-container">
+                        <input class="input" type="{{ hideNewPassword ? 'password' : 'text' }}" name="newPassword"
+                            matInput formControlName="newPassword" maxlength="50" required>
+                        <button mat-icon-button type="button" (click)="toggleNewPasswordVisibility()"
+                            class="password-toggle-button">
+                            <mat-icon>{{ hideNewPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+                        </button>
+                    </div>
                     <mat-error *ngIf="form.get('newPassword').hasError('required')">
                         Password is required
                     </mat-error>
                     <mat-error *ngIf="form.get('newPassword').hasError('pattern')">
-                        Password must contain at least 8 characters, including one uppercase letter, one lowercase letter, one number, and one special character
+                        Password must contain at least 8 characters, including one uppercase letter, one lowercase
+                        letter, one number, and one special character
                     </mat-error>
                 </div>
                 <div class="section-b col-md-12">
                     <mat-label>Re-enter Password</mat-label>
-                    <input class="input" type="password" name="confirmPassword" matInput formControlName="confirmPassword"
-                        maxlength="50" required>
+                    <!-- <input class="input" type="password" name="confirmPassword" matInput formControlName="confirmPassword"
+                        maxlength="50" required> -->
+                    <div class="password-input-container">
+                        <input class="input" type="{{ hideConfirmPassword ? 'password' : 'text' }}"
+                            name="confirmPassword" matInput formControlName="confirmPassword" maxlength="50" required>
+                        <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()"
+                            class="password-toggle-button">
+                            <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+                        </button>
+                    </div>
                     <mat-error *ngIf="form.hasError('passwordsNotMatch')">
                         Passwords do not match
                     </mat-error>
@@ -32,4 +50,3 @@
         </div>
     </div>
 </div>
-
