--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -101,6 +101,27 @@ mat-label {
     animation: twinkling 3s infinite, animateBg 50s linear infinite;
 
 }
+.password-input-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.password-toggle-button {
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: red; /* Set the color of the button to red */
+    background-color: transparent; /* Remove background color */
+    border: none; /* Remove border */
+    cursor: pointer;
+}
+
+.password-toggle-button:focus {
+    outline: none; /* Remove focus outline */
+}
+
 
 @for $i from 1 through 80 {
     .star:nth-child(#{$i}) {
