--- a/src/app/shared-module/snackbar/snackbar.component.html
+++ b/src/app/shared-module/snackbar/snackbar.component.html
@@ -2,7 +2,10 @@
     <div class="col-8  align-self-center" style="position: relative;bottom: 5px;">
         <p id="responseMessage" class="snack_content fs_12 mb-0 align-self-center">{{ data}}</p>
     </div>
-    <div class="col-4">
+    <!-- <div class="col-4">
         <button mat-flat-button color="warn"  (click)="dismiss()">{{'Close' }}</button>
+    </div> -->
+    <div class="col-4">
+        <button mat-flat-button color="warn" class="custom-button" (click)="dismiss()">{{'Close' }}</button>
     </div>
 </div>
