--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -28,15 +28,17 @@
               </mat-option>
             </mat-select>
           </div>
-          <!-- <div class="section-b col-md-12 timezone">
+          <!-- <div class="section-b col-md-12">
             <mat-label>Time Zone</mat-label>
-            <mat-form-field>
-              <mat-select placeholder="Select Time Zone" formControlName="timeZone">
-                <mat-option *ngFor="let timeZone of filteredTimeZones" [value]="timeZone">{{ timeZone }}</mat-option>
-              </mat-select>
-              <ngx-mat-select-search [formControl]="searchControl"></ngx-mat-select-search>
-            </mat-form-field>
-          </div> -->
+            <input class="input" type="text" placeholder="Search time zone" [formControl]="searchControl">
+            <mat-select style="background-color: #111111;" formControlName="timeZone">
+              <mat-option style="background-color: #111111; color: #fff;" *ngFor="let timeZone of filteredTimeZones" [value]="timeZone.value">
+                {{ timeZone.label }}
+              </mat-option>
+            </mat-select>
+          </div>
+           -->
+          
           <div class="section-b col-md-12">
             <mat-label>Password</mat-label>
             <!-- <input class="input" type="password" name="password" matInput formControlName="password" required> -->
